log/build_2025-07-04_05-57-51/laser_shotting_car/stderr.log
  File "/home/orangepi/ros2_workspace/school_competition/install/lib/python3.10/site-packages/laser_shotting_car/main_controller.py", line 75
    if msg.data[1] != '3'
                         ^
SyntaxError: expected ':'

